<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">"Reader for Selfoss"</string>
    <string name="title_activity_login">"Log in"</string>
    <string name="prompt_password">"Password"</string>
    <string name="prompt_http_password">"HTTP Password"</string>
    <string name="action_sign_in">"Go"</string>
    <string name="error_invalid_password">"Password not long enough"</string>
    <string name="error_field_required">"Field required"</string>
    <string name="prompt_url">"Url"</string>
    <string name="withLoginSwitch">"Login required ?"</string>
    <string name="withHttpLoginSwitch">"HTTP Login required ?"</string>
    <string name="login_url_problem">"Oops. You may need to add a \"/\" at the end of the url."</string>
    <string name="prompt_login">"Username"</string>
    <string name="prompt_http_login">"HTTP Username"</string>
    <string name="label_share">"Share"</string>
    <string name="readAll">"Read all"</string>
    <string name="action_disconnect">"Disconnect"</string>
    <string name="title_activity_settings">"Settings"</string>
    <string name="pref_header_general">"General"</string>
    <string name="add_source_hint_tags">"Tag1, Tag2, Tag3"</string>
    <string name="add_source_hint_url">"Link"</string>
    <string name="add_source_hint_name">"Name"</string>
    <string name="add_source">"Add a source"</string>
    <string name="add_source_save">"Save"</string>
    <string name="wrong_infos">"Check your details again."</string>
    <string name="all_posts_not_read">"All posts weren't read"</string>
    <string name="all_posts_read">"All posts were read"</string>
    <string name="cant_get_favs">"Can't get favorites"</string>
    <string name="cant_get_new_elements">"Can't get new articles"</string>
    <string name="cant_get_read">"Can't get read articles"</string>
    <string name="nothing_here">"Nothing here"</string>
    <string name="tab_new">"New"</string>
    <string name="tab_read">"All"</string>
    <string name="tab_favs">"Favorites"</string>
    <string name="action_about">"About"</string>
    <string name="marked_as_read">"Item read"</string>
    <string name="marked_as_unread">"Item unread"</string>
    <string name="undo_string">"Undo"</string>
    <string name="addStringNoUrl">"Log in to add sources."</string>
    <string name="cant_get_sources">"Can't get sources list."</string>
    <string name="cant_create_source">"Can't create source."</string>
    <string name="cant_get_spouts">"Can't get spouts list."</string>
    <string name="form_not_complete">"The form is not complete"</string>
    <string name="pref_header_links">"Links"</string>
    <string name="issue_tracker_link">"Issue Tracker"</string>
    <string name="issue_tracker_summary">"Report a bug or ask for a new feature"</string>
    <string name="warning_wrong_url">"WARNING"</string>
    <string name="pref_switch_card_view_title">"Card View"</string>
    <string name="cant_mark_favortie">"Can't mark article as favorite"</string>
    <string name="cant_unmark_favortie">"Can't remove item from favorite"</string>
    <string name="share">"Share"</string>
    <string name="rating_prompt_title">"Enjoying the app ?"</string>
    <string name="rating_prompt_yes">"Yes !"</string>
    <string name="rating_prompt_no">"Not really …"</string>
    <string name="rating_prompt_feedback_title">"Can you tell us why ?"</string>
    <string name="rating_prompt_feedback_yes">"OK !"</string>
    <string name="rating_prompt_feedback_no">"Not now."</string>
    <string name="rating_prompt_rating_title">"Great ! Can you rate us on the Store ?"</string>
    <string name="rating_prompt_rating_yes">"Sure !"</string>
    <string name="rating_prompt_rating_no">"Not right now."</string>
    <string name="rating_prompt_thanks">"Thanks, your feedback help enhance the app !"</string>
    <string name="switch_unread_count">"Display the unread count as a badge for the bottom bar."</string>
    <string name="switch_unread_count_title">"Display unread count"</string>
    <string name="display_all_counts_title">"Display count for favorite and read"</string>
    <string name="text_wrong_url">"You seem to be trying to use an invalid URL. Make sure it is correct, and if the problem persists, contact me (via the store contact link). Please note that the app needs you to be using Selfoss. You can't access RSS feeds without it."</string>
    <string name="pref_general_internal_browser_title">"Open links inside the app"</string>
    <string name="pref_general_internal_browser_on">"Articles will open inside the app"</string>
    <string name="pref_general_internal_browser_off">"Articles will open with your default browser"</string>
    <string name="prefer_article_viewer_title">"Use the article viewer"</string>
    <string name="prefer_article_viewer_on">"Will use the article viewer instead of the internal browser"</string>
    <string name="prefer_article_viewer_off">"Will use the internal browser instead of the article viewer"</string>
    <string name="pref_general_category_links">"Link handling"</string>
    <string name="pref_general_category_displaying">"Displaying"</string>
    <string name="pref_switch_card_view_on">"The articles will be displayed as cards"</string>
    <string name="pref_switch_card_view_off">"The articles will be displayed as a list"</string>
    <string name="menu_home_refresh">"Update remote"</string>
    <string name="refresh_success_response">"The remote is updated, you can now reload the articles list"</string>
    <string
        name="refresh_failer_message">"The update didn't work, try again later, or check your selfoss logs."</string>
    <string name="refresh_in_progress">"Refresh in progress"</string>
    <string name="card_height_title">Full height cards</string>
    <string name="card_height_on">Cards height will adjust to its content</string>
    <string name="card_height_off">Card height will be fixed</string>
    <string name="source_code">Source code</string>
    <string name="cant_mark_read">Can\'t mark article as read</string>
    <string name="cant_mark_unread">Can\'t mark article as unread</string>
    <string name="drawer_error_loading_tags">Error loading tags…</string>
    <string name="drawer_error_loading_sources">Error loading sources…</string>
    <string name="drawer_item_filters">Filters</string>
    <string name="drawer_action_clear">clear</string>
    <string name="drawer_item_tags">Tags</string>
    <string name="drawer_item_sources">Sources</string>
    <string name="drawer_action_edit">edit</string>
    <string name="no_tags_loaded">No tags loaded</string>
    <string name="no_sources_loaded">No sources loaded</string>
    <string name="drawer_loading">Loading …</string>
    <string name="menu_home_search">Search</string>
    <string name="can_delete_source">Can\'t delete the source…</string>
    <string name="base_url_error">There was an issue when trying to communicate with your Selfoss Instance. If the issue persists, please get in touch with me.</string>
    <string name="pref_header_theme">Themes</string>
    <string name="default_theme">Default</string>
    <string name="default_dark_theme">Default/Dark</string>
    <string name="pref_header_debug">Debug</string>
    <string name="login_debug_title">Activate to log login errors</string>
    <string name="login_debug_on">Any error on the login page will be logged</string>
    <string name="login_debug_off">No log on the login page</string>
    <string name="login_menu_debug">Debug</string>
    <string name="self_hosted_cert_switch">Using a self hosted certificate ?</string>
    <string name="self_signed_cert_warning">Due to security reasons, self signed certificates are not supported by default. By activating this, I\'ll not be responsible of any security problem you encounter.</string>
    <string name="pref_selfoss_category">Selfoss Api</string>
    <string name="pref_api_items_number_title">Loaded items number</string>
    <string name="pref_hidden_tags">Hidden Tags</string>
    <string name="read_debug_title">Read articles appearing as unread ?</string>
    <string name="read_debug_off">No log when marking an item as read</string>
    <string name="read_debug_on">Api calls will be logged when marking an article as read</string>
    <string name="summary_debug_identifier">Debug identifier</string>
    <string name="unique_id_to_clipboard">Identifier copied to your clipboard</string>
    <string
        name="display_header_drawer_summary">Display a header with the selfoss instance url on the lateral drawer.</string>
    <string name="display_header_drawer_title">Account header</string>
    <string name="login_everything_title">Logging every api calls</string>
    <string name="login_everything_on">This will log every api call for debug purpose.</string>
    <string name="login_everything_off">No api call will be logged</string>
    <string name="pref_general_infinite_loading_title">Load more articles on scroll</string>
    <string name="translation">Translation</string>
    <string name="cant_open_invalid_url">The item url is invalid. I\'m looking into solving this issue so the app won\'t crash.</string>
    <string name="drawer_report_bug">Report a bug</string>
    <string name="items_number_should_be_number">The items number should be an integer.</string>
    <string name="reader_action_more">Read more</string>
    <string name="reader_action_open">Open in browser</string>
    <string name="reader_action_share">Share</string>
    <string name="pref_switch_actions_pager_scroll_on">Mark articles as read when swiping between articles.</string>
    <string name="add_to_favs_reader">Add to favorites</string>
    <string name="remove_to_favs_reader">Remove from favorites</string>
    <string name="pref_content_reader_font_size">Article reader content font size</string>
    <string name="pref_header_viewer">Article viewer</string>
    <string name="refresh_dialog_message">This will refresh your Selfoss instance.</string>
    <string name="markall_dialog_message">This will mark all the items as read.</string>
    <string name="pref_switch_actions_pager_scroll">Mark as read on swipe</string>
    <string name="pref_switch_actions_pager_scroll_off">Don\'t mark articles as read when swiping.</string>
    <string name="gdpr_dialog_message">The app does not collect any personal data. Every analytics tools were removed. Crash reports sending is now optional, as is the debug logging. Keep in mind that debugging and crash reports are essential for the app development (You can configure everything in Settings > Debug).</string>
    <string name="gdpr_dialog_title">The app does not share any personal data about you.</string>
    <string name="crash_dialog_text">Something went wrong. Please send the report to the developer.</string>
    <string name="crash_dialog_comment">You can add any helpful details in the comment bellow. Don\'t include any personal data in your comment. You could send me and email with your debug id, and I\'ll keep you posted when the issue is resolved.</string>
    <string name="pref_acra_alwaysaccept">Automatically send crash reports</string>
    <string name="pref_acra_alwaysaccept_enabled">Will send crash reports automatically</string>
    <string name="pref_acra_alwaysaccept_disabled">Will ask everytime when sending crash reports.</string>
    <string name="pref_debug_crash_reports">Crash reports</string>
    <string name="pref_debug_debug_logs">Debug logging (these will be sent without a dialog)</string>
    <string name="acra_login">Enable logging</string>
    <string name="drawer_item_hidden_tags">Hidden Tags</string>
    <string name="unmark">Mark item as unread</string>
    <string name="pref_header_offline">Offline and cache</string>
    <string name="pref_header_experimental">Experimental</string>
    <string name="reader_text_align_left">Align left</string>
    <string name="reader_text_align_justify">Justify</string>
</resources>