<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/pref_header_general"/>


    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$ArticleViewerPreferenceFragment"
        android:icon="@drawable/ic_chrome_reader_mode_black_24"
        android:title="@string/pref_header_viewer"/>


    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$OfflinePreferenceFragment"
        android:icon="@drawable/ic_signal_wifi_statusbar_not_connected"
        android:title="@string/pref_header_offline"/>

    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$DebugPreferenceFragment"
        android:icon="@drawable/ic_bug_report"
        android:title="@string/pref_header_debug"/>

    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$ThemePreferenceFragment"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/pref_header_theme"/>

    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$LinksPreferenceFragment"
        android:icon="@drawable/ic_info_black_24"
        android:title="@string/pref_header_links"/>

    <header
        android:fragment="apps.amine.bou.readerforselfoss.settings.SettingsActivity$ExperimentalPreferenceFragment"
        android:icon="@drawable/ic_action_lab"
        android:title="@string/pref_header_experimental"/>

</preference-headers>
