<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="mark_on_scroll"
        android:summaryOff="@string/pref_switch_actions_pager_scroll_off"
        android:summaryOn="@string/pref_switch_actions_pager_scroll_on"
        android:title="@string/pref_switch_actions_pager_scroll" />

    <EditTextPreference
        android:defaultValue="16"
        android:inputType="number"
        android:key="reader_font_size"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_content_reader_font_size" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/preloaded_fonts"
        android:entryValues="@array/preloaded_fonts"
        android:key="list_preference_1"
        android:title="List preference" />


</PreferenceScreen>
